--- a/Experiment_6/index.html
+++ b/Experiment_6/index.html
@@ -8,10 +8,10 @@
     <body>
         <h1>My E-commerce Store</h1>
         <div class="prod_card">
-            <img src="img_product.jpg" alt="product image" width="420" height="350">
+            <img src="img_product.jpg" alt="product image" width="420" height=auto>
             <h2 >Stylish T-shirt</h2>
             <p>A comfortable t-shirt for casual wear.</p>
-            <p id="price">Price "499"</p>
+            <p id="price">Price  &#8377 499</p>
             <button>Add to Cart</button>
         </div>
 
