--- a/Experiment_7/index.html
+++ b/Experiment_7/index.html
@@ -14,6 +14,14 @@
             <a href="#" class="block_menu">About</a>
             <a href="#" class="block_menu"  >Contact Us</a>
          </div> 
+         <div>
+            <h2 class="heading">Inline Example</h2>
+            <p class="inline">Home</p>
+            <p class="inline">Products</p>
+            <p class="inline">About</p>
+            <p class="inline">Contact</p>
+         </div>
+         
          
 
     </body>
