--- a/Experiment_7/index.html
+++ b/Experiment_7/index.html
@@ -21,6 +21,13 @@
             <p class="inline">About</p>
             <p class="inline">Contact</p>
          </div>
+         <div>
+            <h2 class="heading">Inline-Block Example</h2>
+            <p class="inline_block red">Home</p>
+            <p class="inline_block blue">Products</p>
+            <p class="inline_block green">About</p>
+            <p class="inline_block pink">Contact</p>
+         </div>
          
          
 
