--- a/Experiment_7/index.html
+++ b/Experiment_7/index.html
@@ -28,7 +28,13 @@
             <p class="inline_block green">About</p>
             <p class="inline_block pink">Contact</p>
          </div>
-         
+         <div>
+            <h2 class="heading">Float</h2>
+            <p class="float red">Home</p>
+            <p class="float blue">Products</p>
+            <p class="float green">About</p>
+            <p class="float pink">Contact</p>
+         </div>
          
 
     </body>
