--- a/Experiment_8/index.html
+++ b/Experiment_8/index.html
@@ -9,7 +9,17 @@
             <div class="card">
                 <div class="id_logo">JK</div>
                 <p style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-weight: bolder;">Jeet Kumar</p>
-                <p>B.Tech-cse<br>roll no.21cs1007<br>1st year</p>
+                <p>B.Tech-CSE<br>roll no.21cs1007<br>1st year</p>
+            </div>
+            <div class="card">
+                <div class="id_logo">AR</div>
+                <p style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-weight: bolder;">Asha Rani</p>
+                <p>B.Tech-IT<br>roll no.21IT1012<br>1st year</p>
+            </div>
+            <div class="card">
+                <div class="id_logo">RK</div>
+                <p style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-weight: bolder;">Rohit Kumar</p>
+                <p>B.Tech-ECE<br>roll no.21EC109<br>1st year</p>
             </div>
             
 
