--- a/Experiment_9/index.html
+++ b/Experiment_9/index.html
@@ -4,12 +4,13 @@
         <title>Experiment 9</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="body">
+        <h1 id="heading">Best Selling Items</h1>
         <div class="card">
             <img src="img1.jpg" alt="earphone" height="200" width="200" >
             <P class="header">boAt nirvana Zenith Pro (2025)</P>
             <p class="conent">perimium...</p>
             <p class="price">&#8377; 1279</p>
-            <button>Buy now</button>
+            <button class="btn">Buy now</button>
         </div>
     </body>
