--- a/practice/index.html
+++ b/practice/index.html
@@ -10,5 +10,7 @@
             <div>1</div>
             <div>2</div>
             <div>3</div>
+            <div>4</div>
+            <div class="item1">5</div>
         </div>
     </body>
