--- a/practice/questions/css_sol_4.html
+++ b/practice/questions/css_sol_4.html
@@ -33,7 +33,12 @@
                 font-weight: bold;
                 font-size: 300%;
             }
-            
+            .prc{
+                color: green;
+                font-weight: bold;
+                font-size: 200%;
+                font-family: sans-serif;
+            }
            
 
         </style>
