--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Level_1</title>
+    <style>
+        .s1
+        {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: brown;">hello everyone!(inline style)</h1>
+    <h1 class="s1">hello everyone(internal style)</h1>
     
 </body>
 </html>
