--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Level_1</title>
+    <link rel="stylesheet" href="stlye.css">
     <style>
         .s1
         {
@@ -14,6 +15,7 @@
 <body>
     <h1 style="color: brown;">hello everyone!(inline style)</h1>
     <h1 class="s1">hello everyone(internal style)</h1>
+    <h1 class="s2">hello everyone(external sttle)</h1>
     
 </body>
 </html>
