--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -6,16 +6,25 @@
     <title>CSS Level_1</title>
     <link rel="stylesheet" href="stlye.css">
     <style>
+        /* class selector */
         .s1
         {
-            color: blue;
+            color: rgb(255, 119, 0);
         }
+         /* element selector */
+            h3{
+                color: brown;
+                background-color: antiquewhite;
+                text-align: right;
+               
+            }
     </style>
 </head>
 <body>
     <h1 style="color: brown;">hello everyone!(inline style)</h1>
     <h1 class="s1">hello everyone(internal style)</h1>
     <h1 class="s2">hello everyone(external sttle)</h1>
+    <h3>its element selector</h3>
     
 </body>
 </html>
