--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -18,6 +18,10 @@
                 text-align: right;
                
             }
+        /* universal selector */
+        *{
+            font-family: 'Courier New', Courier, monospace;
+        }
     </style>
 </head>
 <body>
