--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -22,6 +22,12 @@
         *{
             font-family: 'Courier New', Courier, monospace;
         }
+        /*id selector*/
+        #unique{
+            background-color: rgb(0, 247, 255);
+            color: rgb(54, 0, 45);
+                display: inline-block;
+        }
     </style>
 </head>
 <body>
@@ -29,6 +35,6 @@
     <h1 class="s1">hello everyone(internal style)</h1>
     <h1 class="s2">hello everyone(external sttle)</h1>
     <h3>its element selector</h3>
-    
+    <h3 id="unique">id is unque and prefered</h3>
 </body>
 </html>
