--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -36,6 +36,12 @@
         div p{
             color: blue;
         }
+        .text
+        {
+            text-decoration: underline dotted red;
+            font-size: 200%;
+            color: bisque;
+        }
 
     </style>
 </head>
@@ -46,5 +52,7 @@
     <h3>its element selector</h3>
     <h3 id="unique">id is unque and prefered</h3>
     <div><p>this is paragraph in div container</p></div>
+    <p class="text">Text formating Example <br> <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/text-decoration">link for same </a> </p>
+    
 </body>
 </html>
