--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -19,7 +19,7 @@
             h3{
                 color: brown;
                 background-color: antiquewhite;
-                text-align: right;
+                text-align: center;
                
             }
         /* universal selector */
@@ -30,7 +30,7 @@
         #unique{
             background-color: rgb(0, 247, 255);
             color: rgb(54, 0, 45);
-                display: inline-block;
+            display: inline-block;
         }
         /*decendent selector*/
         div p{
@@ -53,6 +53,12 @@
     <h3 id="unique">id is unque and prefered</h3>
     <div><p>this is paragraph in div container</p></div>
     <p class="text">Text formating Example <br> <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/text-decoration">link for same </a> </p>
+    <br>
+    <br>
+    <h3>Box model</h3>
+    <div class="boxmd">
+
+    </div>
     
 </body>
 </html>
