--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -62,5 +62,10 @@
      <div class="boxmd">
 
     </div>
+    <h2>Block</h2>
+    <div style="color: rgb(255, 255, 255);background-color: blueviolet;margin: 30px;">box 1</div>
+    <div style="color: rgb(255, 255, 255);background-color: blueviolet; margin: 30px;">box 2</div>
+    <div style="color: rgb(255, 255, 255);background-color: blueviolet; margin: 30px;">box 3</div>
+    
 </body>
 </html>
