--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -66,6 +66,9 @@
     <div style="color: rgb(255, 255, 255);background-color: blueviolet;margin: 30px;">box 1</div>
     <div style="color: rgb(255, 255, 255);background-color: blueviolet; margin: 30px;">box 2</div>
     <div style="color: rgb(255, 255, 255);background-color: blueviolet; margin: 30px;">box 3</div>
-    
+    <h2>inline</h2>
+    <div id="inline">box 1</div>
+    <div id="inline">box 2</div>
+    <div id="inline">box 3</div> 
 </body>
 </html>
