--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -70,5 +70,11 @@
     <div id="inline">box 1</div>
     <div id="inline">box 2</div>
     <div id="inline">box 3</div> 
+    <br>
+    <h2>inline-block</h2>
+    <div id="inline-block">box 1</div>
+    <div id="inline-block">box 2</div>
+    <div id="inline-block">box 3</div> 
+
 </body>
 </html>
