--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -75,6 +75,9 @@
     <div id="inline-block">box 1</div>
     <div id="inline-block">box 2</div>
     <div id="inline-block">box 3</div> 
-
+    <h2>transparansy</h2>
+    <div id="box1"></div>
+    <div id="box2"></div>
+    <div id="box3"></div>
 </body>
 </html>
