--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -79,5 +79,17 @@
     <div id="box1"></div>
     <div id="box2"></div>
     <div id="box3"></div>
+
+    <div id="box4">.....fixed</div>
+    <div id="box5">relative to body</div>
+    <!-- <div id="box6">sticky</div> -->
+    <br>
+    <h3>Flex box</h3>
+    <div class="flex_cont">
+        <div class="box6">box6</div>
+        <div class="box7">box7</div>
+        <div class="box8">box8</div>
+
+    </div>
 </body>
 </html>
