--- a/practice/from_scrach/index.html
+++ b/practice/from_scrach/index.html
@@ -89,6 +89,10 @@
         <div class="box6">box6</div>
         <div class="box7">box7</div>
         <div class="box8">box8</div>
+         <div class="box8">box8</div>
+        <div class="box6">box6</div>
+        <div class="box7">box7</div>
+       
 
     </div>
 </body>
