relative font size

--- a/practice/index.html
+++ b/practice/index.html
@@ -13,4 +13,11 @@
             <div>4</div>
             <div class="item1">5</div>
         </div>
+        <P>Date:4-12-25</P>
+        <div style="font-size: 20px;">
+            <p>relative font size</p>
+            <div>
+                <p style="font-size: 2em;">x2 font size</p>
+            </div>
+        </div>
     </body>
