--- a/practice/index.html
+++ b/practice/index.html
@@ -14,10 +14,27 @@
             <div class="item1">5</div>
         </div>
         <P>Date:4-12-25</P>
+        <p>root element</p>
+        <!-- root element is 16px -->
         <div style="font-size: 20px;">
             <p>relative font size</p>
             <div>
-                <p style="font-size: 2em;">x2 font size</p>
+                <p style="font-size: 2em;margin: 3em;background-color: bisque;">x2 font size</p>
+                <!-- 3 times the parent font size then 3x20 -->
+                 <p style="font-size: 3rem;"> 3x of root element</p>
+                 <!-- its 3 time od 16px root -->
+                <!-- vw view code width 
+                    vh view port heif-->               
             </div>
+            <h2>transfor mation</h2>
+            <div class="box_1">
+                <p>box 1</p>
+            </div>
+            <br>
+            <br>
+            <div class="box_2">
+                <p>box 2</p>
+            </div>
+    
         </div>
     </body>
