--- a/experiment_10/index.html
+++ b/experiment_10/index.html
@@ -15,6 +15,14 @@
             <li><a href="#">Contact</a></li>
         </ul>
 
-    
+    <div class="actions">
+        <a href="#">Cart</a>
+        <a href="#">Login</a>
+    </div>
+    </nav>
+    <section>
+        <h1>Welcome to ShopEase !!</h1>
+        <p>Your one-stop shop for all your needs.</p>
+    </section>
 </body>
 </html>
