--- a/practice/index.html
+++ b/practice/index.html
@@ -36,5 +36,19 @@
                 <p>box 2</p>
             </div>
     
+
+            <h2>transformation Properties</h2>
+            <div class="box translate">box----</div>
+            <br>
+            <div class="box rotate">box----</div>
+            <br>
+            <div class="box scale">box----</div>
+            <br>
+            <div class="box skew">box----</div>
+            <br>
+            <div class="box combo">box----</div>
+            <br>
+            
+
         </div>
     </body>
