--- a/practice/index.html
+++ b/practice/index.html
@@ -35,6 +35,7 @@
             <div class="box_2">
                 <p>box 2</p>
             </div>
+            <hr>
     
 
             <h2>transformation Properties</h2>
@@ -47,8 +48,11 @@
             <div class="box skew">box----</div>
             <br>
             <div class="box combo">box----</div>
+            <br><br><br><hr>
+            <h2>Media Queries</h2>
             <br>
-            
+            <!-- <div id="media" class="box">box</div> -->
+             <div  class="box media" >box</div>
 
         </div>
     </body>
