transformation duration timing delay

--- a/practice/index.html
+++ b/practice/index.html
@@ -48,6 +48,9 @@
             <div class="box skew">box----</div>
             <br>
             <div class="box combo">box----</div>
+            <br>
+             <h2>transformation other Properties</h2>
+             <div class="box all">box----</div>
             <br><br><br><hr>
             <h2>Media Queries</h2>
             <br>
