--- a/practice/index.html
+++ b/practice/index.html
@@ -56,6 +56,9 @@
             <br>
             <!-- <div id="media" class="box">box</div> -->
              <div  class="box media" >box</div>
+             <br><hr>
+             <h2>Animation</h2>
+             <div class="box anni">box</div>
 
         </div>
     </body>
