created loader Annimation

--- a/practice/index.html
+++ b/practice/index.html
@@ -59,6 +59,10 @@
              <br><hr>
              <h2>Animation</h2>
              <div class="box anni">box</div>
+             <h4>loader Animation</h4>
+             <div class="loader">
+                
+             </div>
 
         </div>
     </body>
