amazon_navbar_correction

--- a/project_amazon/index.html
+++ b/project_amazon/index.html
@@ -34,7 +34,11 @@
                  <button id="search_button"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
             <div id="nav-laguage">
-                
+                <div id="logo"></div>
+                <select id="lang">
+                    <option value="english">EN</option>
+                    <option value="hindi">hindi</option>
+                </select>
 
             </div>
             <div id="nav-account">
