--- a/project_amazon/index.html
+++ b/project_amazon/index.html
@@ -335,6 +335,50 @@
 
         
     </content>
+    <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^footer^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+    <footer class="footer">
+    <div class="back-to-top"><a href="#nav-logo">Back to top</a></div>
+
+    <div class="footer-links">
+        <div class="footer-col">
+        <h3>Get to Know Us</h3>
+        <a href="#">About Amazon</a>
+        <a href="#">Careers</a>
+        <a href="#">Press Releases</a>
+        <a href="#">Amazon Science</a>
+        </div>
+
+        <div class="footer-col">
+        <h3>Connect with Us</h3>
+        <a href="#">Facebook</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+        </div>
+
+        <div class="footer-col">
+        <h3>Make Money with Us</h3>
+        <a href="#">Sell on Amazon</a>
+        <a href="#">Sell under Amazon Accelerator</a>
+        <a href="#">Protect and Build Your Brand</a>
+        <a href="#">Amazon Global Selling</a>
+        <a href="#">Supply to Amazon</a>
+        <a href="#">Become an Affiliate</a>
+        <a href="#">Fulfilment by Amazon</a>
+        <a href="#">Advertise Your Products</a>
+        <a href="#">Amazon Pay on Merchants</a>
+        </div>
+
+        <div class="footer-col">
+        <h3>Let Us Help You</h3>
+        <a href="#">Your Account</a>
+        <a href="#">Returns Centre</a>
+        <a href="#">Recalls and Product Safety Alerts</a>
+        <a href="#">100% Purchase Protection</a>
+        <a href="#">Amazon App Download</a>
+        <a href="#">Help</a>
+        </div>
+    </div>
+    </footer>
 
     
 </body>
