--- a/project_amazon/index.html
+++ b/project_amazon/index.html
@@ -12,12 +12,13 @@
 
 <body>
     <header>
+        <div id="top"></div>
         <!-- ^^^^^^^^^^^^^^^^^^^^^^ nav bar^^^^^^^^^^^^^^^^^^^^^^^  -->
         <div class="navbar">
             <diV id="nav-logo"></diV>
             <div id="nav-location">
                 <i class="fa-solid fa-location-dot" ></i>
-                <p>Delivering to Gaziabad<br> <b>update location</b></p>
+                <p>Delivering to Ghaziabad<br> <b>update location</b></p>
             </div>
             <div id="nav-search">
                 <select id="sort">
@@ -337,7 +338,7 @@
     </content>
     <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^footer^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
     <footer class="footer">
-    <div class="back-to-top"><a href="#nav-logo">Back to top</a></div>
+    <div class="back-to-top"><a href="#top">Back to top</a></div>
 
     <div class="footer-links">
         <div class="footer-col">
